--- a/style.css
+++ b/style.css
@@ -67,8 +67,57 @@
 /**************************************************************
 				Argument
 **************************************************************/
-.wp-block-cover.argument li {
-	font-size:150%;
+.argument  {
+	width: 100vw;
+	margin-left: 50%;
+	transform: translateX(-50%);	
+}
+.argument h2 {
+	padding-bottom:10px;
+	position: relative;
+}
+.argument h2::before {
+	content: "";
+	position: absolute;
+	width: 80px;
+	left: 50%;
+	bottom: 0;
+	margin-left: -40px;
+	border-bottom: 2px solid #222;
+}
+.argument .wp-block-columns {
+	margin-bottom:0;
+	margin-top:40px;
+}
+.argument .wp-block-group__inner-container {
+	margin:auto;
+	max-width:1000px;
+	padding:50px 20px;
+}
+.argument p {
+	color: black;
+	font-size:120%;
+	line-height: 1.2;
+	max-width: 600px;
+	margin: 1em auto;
+}
+.argument ul {
+	list-style:none;
+}
+.argument li {
+	position: relative;
+}
+.argument li::before {
+	border: solid 3px var(--vert);
+	border-radius: 50%;
+	content: '';
+	display: block;
+	position: absolute;
+	width: 8px;
+	height: 8px;
+	left: -23px;
+	top: 9px;
+	
 }
 /**************************************************************
 				Divers
