--- a/style.css
+++ b/style.css
@@ -96,6 +96,11 @@ body {
 	margin:50px 0;
 	padding:100px;
 }
+@media screen and (min-width:1000px) {
+	.wp-block-button__link {
+		display: none;
+	}
+}
 /**************************************************************
 				Argument
 **************************************************************/
@@ -186,10 +191,13 @@ input[type="submit"],
 	border-radius: 5px;
 }
 a.wp-block-button__link {
+	background-color: var(--vert2);
+	color:var(--blanc);
 	transition:background var(--transition);
 }
 a.wp-block-button__link:hover, a.wp-block-button__link:focus {
 	background-color: var(--vert-fonce);
+	color:var(--blanc);
 	text-decoration: none;
 }
 
